--- a/source/B2BApi/B2BApi.csproj
+++ b/source/B2BApi/B2BApi.csproj
@@ -24,12 +24,12 @@ limitations under the License.
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="DurableFunctionsMonitor.DotNetIsolated" Version="6.6.0" />
-        <PackageReference Include="Energinet.DataHub.Core.Databricks.SqlStatementExecution" Version="12.0.2"/>
-        <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="1.0.2"/>
+        <PackageReference Include="Energinet.DataHub.Core.Databricks.SqlStatementExecution" Version="13.0.0-alpha-89" />
+        <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="2.0.0-alpha-10" />
         <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.2.2" />
         <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.4"/>
-        <PackageReference Include="Energinet.DataHub.Core.App.FunctionApp" Version="14.0.2"/>
+        <PackageReference Include="Energinet.DataHub.Core.App.FunctionApp" Version="15.0.0-alpha-450" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
