--- a/source/DataAccess/DataAccess.csproj
+++ b/source/DataAccess/DataAccess.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
       <PackageReference Include="Dapper" Version="2.1.66"/>
       <PackageReference Include="AdaskoTheBeAsT.Dapper.NodaTime" Version="5.0.0"/>
-      <PackageReference Include="Energinet.DataHub.Core.App.Common" Version="14.0.2"/>
+      <PackageReference Include="Energinet.DataHub.Core.App.Common" Version="15.0.0-alpha-450" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.2">
       <PrivateAssets>all</PrivateAssets>
