--- a/source/Outbox.Infrastructure/Outbox.Infrastructure.csproj
+++ b/source/Outbox.Infrastructure/Outbox.Infrastructure.csproj
@@ -4,7 +4,7 @@
         <RootNamespace>Energinet.DataHub.EDI.Outbox.Infrastructure</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="1.0.2"/>
+        <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="2.0.0-alpha-10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
         <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.2">
