--- a/source/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/source/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Azure.Storage.Blobs" Version="9.0.0" />
     <PackageReference Include="Azure.Storage.Blobs.Batch" Version="12.20.0" />
-    <PackageReference Include="Energinet.DataHub.Core.App.Common" Version="15.0.0" />
+    <PackageReference Include="Energinet.DataHub.Core.App.Common" Version="15.1.0-alpha-454" />
     <PackageReference Include="Energinet.DataHub.Core.Messaging" Version="7.0.0" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
