--- a/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
+++ b/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
@@ -36,11 +36,123 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\urn-entsoe-eu-local-extension-types.schema.json" />
-      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\urn-entsoe-eu-wgedi-codelists.schema.json" />
-      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-general-acknowledgement-0-1.xsd" />
-      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-entsoe-eu-local-extension-types.xsd" />
-      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-entsoe-eu-wgedi-codelists.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\urn-entsoe-eu-local-extension-types.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\urn-entsoe-eu-wgedi-codelists.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-general-acknowledgement-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-entsoe-eu-local-extension-types.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-entsoe-eu-wgedi-codelists.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_AggregatedBusinessInformationEntities-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_AggregatedBusinessInformationEntities-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_DK_Acknowledgement-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_DK_Acknowledgement-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_BusinessDataType-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\documents\RSM009\ebIX_BusinessDataType-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000001-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000001-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000004-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000004-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000005-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000005-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000006-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000006-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000008-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000008-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000010-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000010-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000012-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000012-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000019-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000019-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000020-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000020-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000023-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000023-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000028-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000028-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000029-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000029-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000030-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000030-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000041-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000041-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000042-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000042-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000075-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000075-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000076-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000076-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000077-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000077-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000080-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_000080-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_CH0002-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_CH0002-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_NL0005-2.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Ebix\Schemas\generic\260_NL0005-2.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Domain\Schemas\Cim\Json\Schemas\Acknowledgement-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
