--- a/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
+++ b/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
@@ -36,7 +36,22 @@
     </ItemGroup>
 
     <ItemGroup>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Notify-Aggregated-Measure-Data-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
       <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Notify-Validated-measure-data-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Notify-wholesale-services-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Reject-request-aggregated-measure-data-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Reject-request-Change-of-Supplier-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Reject-request-wholesale-settlement-assembly-model.schema.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\urn-entsoe-eu-local-extension-types.schema.json">
@@ -46,6 +61,18 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-general-acknowledgement-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-notifyaggregatedmeasuredata-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-notifywholesaleservices-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-rejectrequestaggregatedmeasuredata-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-rejectrequestwholesalesettlement-0-1.xsd">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-entsoe-eu-local-extension-types.xsd">
