--- a/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
+++ b/source/OutgoingMessages.UnitTests/OutgoingMessages.UnitTests.csproj
@@ -741,6 +741,14 @@
       <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_000080-2.xsd" />
       <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_CH0002-2.xsd" />
       <None Remove="Domain\Schemas\Ebix\Schemas\generic\260_NL0005-2.xsd" />
+      <None Remove="Domain\Schemas\Cim\Json\Schemas\Reminder-of-missing-measure-data-assembly-model.schema.json" />
+      <EmbeddedResource Include="Domain\Schemas\Cim\Json\Schemas\Reminder-of-missing-measure-data-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <None Remove="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-reminderofmissingmeasuredata-0-1.xsd" />
+      <EmbeddedResource Include="Domain\Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-reminderofmissingmeasuredata-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
