--- a/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
+++ b/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
@@ -226,6 +226,7 @@ limitations under the License.
     <EmbeddedResource Include="Scripts\Model\202505141543 Rename ExternalId_NEW to ExternalId on OutgoingMessages table.sql" />
     <EmbeddedResource Include="Scripts\Model\202505141544 Update idempotency unique constraint on OutgoingMessages table.sql" />
     <EmbeddedResource Include="Scripts\Model\202505141545 Delete ExternalId_OLD on OutgoingMessages table.sql" />
+    <EmbeddedResource Include="Scripts\Model\202505161237 Update ExternalId to BINARY on OutgoingMessages table.sql" />
     <None Remove="Scripts\Model\202227101333 Add AggregatedTimeSeriesTransactions table.sql" />
     <None Remove="Scripts\Model\202310201142 resize ActorNumber nvarchar on Actor.sql" />
     <None Remove="Scripts\Model\202310231329 Alter Bundles1.sql" />
