--- a/source/SubsystemTests/SubsystemTests.csproj
+++ b/source/SubsystemTests/SubsystemTests.csproj
@@ -179,6 +179,15 @@
       <EmbeddedResource Include="Messages\xml\RequestWholesaleSettlementWithBadPeriod.xml">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
+      <EmbeddedResource Include="Messages\xml\rsm-012-bundle-xml-96points-2750transactions.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Messages\json\rsm-012-bundle-json-96points-2150transactions.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Messages\ebix\rsm-012-bundle-ebix-96points-1666transactions.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemDefinitionGroup>
