--- a/source/IncomingMessages.Domain/IncomingMessages.Domain.csproj
+++ b/source/IncomingMessages.Domain/IncomingMessages.Domain.csproj
@@ -981,6 +981,10 @@
       <EmbeddedResource Include="Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-notifyvalidatedmeasuredata-0-1.xsd">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
+      <None Remove="Schemas\Cim\Json\Schemas\Request-validated-measure-data-assembly-model.schema.json" />
+      <EmbeddedResource Include="Schemas\Cim\Json\Schemas\Request-validated-measure-data-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
 </Project>
