--- a/source/IncomingMessages.IntegrationTests/IncomingMessages.IntegrationTests.csproj
+++ b/source/IncomingMessages.IntegrationTests/IncomingMessages.IntegrationTests.csproj
@@ -70,6 +70,22 @@ limitations under the License.
         <EmbeddedResource Include="IncomingMessages\MeteredDataForMeteringPoint.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
+        <None Remove="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.json" />
+        <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <None Remove="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurementsWithTwoTransactions.json" />
+        <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurementsWithTwoTransactions.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <None Remove="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurementsMarketEvaluationPointValue.json" />
+        <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurementsMarketEvaluationPointValue.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <None Remove="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurements.json" />
+        <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurements.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
