--- a/source/B2BApi/B2BApi.csproj
+++ b/source/B2BApi/B2BApi.csproj
@@ -29,7 +29,7 @@ limitations under the License.
         <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.2.2" />
         <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.19.0" />
-        <PackageReference Include="Energinet.DataHub.Core.App.FunctionApp" Version="15.4.0" />
+        <PackageReference Include="Energinet.DataHub.Core.App.FunctionApp" Version="15.5.0-alpha-461" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
