--- a/source/IncomingMessages.Domain/IncomingMessages.Domain.csproj
+++ b/source/IncomingMessages.Domain/IncomingMessages.Domain.csproj
@@ -981,6 +981,9 @@
       <EmbeddedResource Include="Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-notifyvalidatedmeasuredata-0-1.xsd">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
+      <EmbeddedResource Include="Schemas\Cim\Xml\Schemas\urn-ediel-org-measure-requestvalidatedmeasuredata-0-1.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
 </Project>
