--- a/source/OutgoingMessages.Application/OutgoingMessages.Application.csproj
+++ b/source/OutgoingMessages.Application/OutgoingMessages.Application.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.5" />
